Updated GenerateInstaller and UBTA Installer files.

--- a/UBTAGenerateInstaller/UBTAGenerateInstaller.csproj
+++ b/UBTAGenerateInstaller/UBTAGenerateInstaller.csproj
@@ -10,10 +10,10 @@
 
   <ItemGroup>
     <Reference Include="BackupMemoryTest">
-      <HintPath>..\..\Program Files (x86)\UniversalBoardTestApp\UniversalBoardTestConfig\Scripts\BackupMemoryTest.dll</HintPath>
+      <HintPath>..\..\..\Program Files (x86)\UniversalBoardTestApp\UniversalBoardTestConfig\Scripts\BackupMemoryTest.dll</HintPath>
     </Reference>
     <Reference Include="CANConnectorTest">
-      <HintPath>..\..\Program Files (x86)\UniversalBoardTestApp\UniversalBoardTestConfig\Scripts\CANConnectorTest.dll</HintPath>
+      <HintPath>..\..\..\Program Files (x86)\UniversalBoardTestApp\UniversalBoardTestConfig\Scripts\CANConnectorTest.dll</HintPath>
     </Reference>
     <Reference Include="ConnectionTester">
       <HintPath>..\..\..\Program Files (x86)\UniversalBoardTestApp\UniversalBoardTestConfig\Connections\ConnectionTester.dll</HintPath>
@@ -22,19 +22,19 @@
       <HintPath>..\..\..\Program Files (x86)\UniversalBoardTestApp\UniversalBoardTestConfig\Scripts\DigitalIOTest.dll</HintPath>
     </Reference>
     <Reference Include="FANTest">
-      <HintPath>..\..\Program Files (x86)\UniversalBoardTestApp\UniversalBoardTestConfig\Scripts\FANTest.dll</HintPath>
+      <HintPath>..\..\..\Program Files (x86)\UniversalBoardTestApp\UniversalBoardTestConfig\Scripts\FANTest.dll</HintPath>
     </Reference>
     <Reference Include="HardwareParameterHandler">
       <HintPath>..\..\..\Program Files (x86)\UniversalBoardTestApp\UniversalBoardTestConfig\Connections\HardwareParameterHandler.dll</HintPath>
     </Reference>
     <Reference Include="LEDBarTest">
-      <HintPath>..\..\Program Files (x86)\UniversalBoardTestApp\UniversalBoardTestConfig\Scripts\LEDBarTest.dll</HintPath>
+      <HintPath>..\..\..\Program Files (x86)\UniversalBoardTestApp\UniversalBoardTestConfig\Scripts\LEDBarTest.dll</HintPath>
     </Reference>
     <Reference Include="ServiceLevelTest">
       <HintPath>..\..\..\Program Files (x86)\UniversalBoardTestApp\UniversalBoardTestConfig\Scripts\ServiceLevelTest.dll</HintPath>
     </Reference>
     <Reference Include="USBHubTest">
-      <HintPath>..\..\Program Files (x86)\UniversalBoardTestApp\UniversalBoardTestConfig\Scripts\USBHubTest.dll</HintPath>
+      <HintPath>..\..\..\Program Files (x86)\UniversalBoardTestApp\UniversalBoardTestConfig\Scripts\USBHubTest.dll</HintPath>
     </Reference>
   </ItemGroup>
 
