--- a/Scripts/KeyPadLEDBarTest/KeyPadLEDBarTest.csproj
+++ b/Scripts/KeyPadLEDBarTest/KeyPadLEDBarTest.csproj
@@ -51,6 +51,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomMessageBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CustomMessageBox.Designer.cs">
+      <DependentUpon>CustomMessageBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="Helper.cs" />
     <Compile Include="KeyPadLEDBarFunctionalTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
